新規ルーレットページの作成機能を追加
トップページのボタンを押して新規ルーレットページ開くように変更

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,4 +1,4 @@
 h2.text-2xl.font-bold.mb-3
   | ルーレットトーーク！
-= link_to "ルーレットを作る", root_path, class: "btn btn-primary"
+= link_to "ルーレットを作る", roulettes_path, data: { "turbo-method": :post }, class: "btn btn-primary"
 
