--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -4,23 +4,23 @@ div.flex
   div.w-auto
     div class="text-center relative w-[500px]"
       div.roulette__theme
-      ul.theme__labelContainer
-        li.theme__label style="left: -1.005050633883343px; top: 88.99494936611664px; transform: rotate(45deg);"
+      ul.absolute.theme__labelContainer
+        li.absolute.theme__label style="left: -1.005050633883343px; top: 88.99494936611664px; transform: rotate(45deg);"
           | トークテーマ1
-        li.theme__label style="left: -198.99494936611666px; top: 88.99494936611664px; transform: rotate(135deg);"
+        li.absolute.theme__label style="left: -198.99494936611666px; top: 88.99494936611664px; transform: rotate(135deg);"
           | トークテーマ2
-        li.theme__label style="left: -198.99494936611666px; top: -108.99494936611664px; transform: rotate(-135deg);"
+        li.absolute.theme__label style="left: -198.99494936611666px; top: -108.99494936611664px; transform: rotate(-135deg);"
           | トークテーマ3
-        li.theme__label style="left: -1.0050506338833571px; top: -108.99494936611666px; transform: rotate(-45deg);"
+        li.absolute.theme__label style="left: -1.0050506338833571px; top: -108.99494936611666px; transform: rotate(-45deg);"
           | トークテーマ4
-      div.roulette__speaker
-      / ul.speaker__labelContainer
-      /   li.speaker__label style=""
-      /     | ユーザー1
-      /   li.speaker__label style=""
-      /     | ユーザー2
-      /   li.speaker__label style=""
-      /     | ユーザー3
-      /   li.speaker__label style=""
-      /     | ユーザー4
+      div.absolute.roulette__speaker
+      ul.absolute.speaker__labelContainer
+        li.absolute.speaker__label style=""
+          | ユーザー1
+        li.absolute.speaker__label style=""
+          | ユーザー2
+        li.absolute.speaker__label style=""
+          | ユーザー3
+        li.absolute.speaker__label style=""
+          | ユーザー4
 
