話す人のラベルを表示できるように変更

--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -15,12 +15,12 @@ div.flex
           | トークテーマ4
       div.absolute.roulette__speaker
       ul.absolute.speaker__labelContainer
-        li.absolute.speaker__label style=""
+        li.absolute.speaker__label style="left: -7.573593128807147px; top: 32.426406871192846px; transform: rotate(45deg)"
           | ユーザー1
-        li.absolute.speaker__label style=""
+        li.absolute.speaker__label style="left: -92.42640687119285px; top: 32.426406871192846px; transform: rotate(135deg)"
           | ユーザー2
-        li.absolute.speaker__label style=""
+        li.absolute.speaker__label style="left: -92.42640687119285px; top: -52.426406871192846px; transform: rotate(-135deg)"
           | ユーザー3
-        li.absolute.speaker__label style=""
+        li.absolute.speaker__label style="left: -7.573593128807147px; top: -52.426406871192846px; transform: rotate(-45deg)"
           | ユーザー4
 
