--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -3,6 +3,7 @@ h2.text-2xl.font-bold.mb-3
 div.flex
   div.w-auto
     div class="text-center relative w-[500px]"
+      div.absolute.roulette__needle-theme
       div.roulette__theme
       ul.absolute.theme__labelContainer
         li.absolute.theme__label style="left: -1.005050633883343px; top: 88.99494936611664px; transform: rotate(45deg);"
@@ -13,6 +14,7 @@ div.flex
           | トークテーマ3
         li.absolute.theme__label style="left: -1.0050506338833571px; top: -108.99494936611666px; transform: rotate(-45deg);"
           | トークテーマ4
+      div.absolute.roulette__needle-speaker
       div.absolute.roulette__speaker
       ul.absolute.speaker__labelContainer
         li.absolute.speaker__label style="left: -7.573593128807147px; top: 32.426406871192846px; transform: rotate(45deg)"
@@ -23,4 +25,6 @@ div.flex
           | ユーザー3
         li.absolute.speaker__label style="left: -7.573593128807147px; top: -52.426406871192846px; transform: rotate(-45deg)"
           | ユーザー4
+    button.btn.btn-primary
+      | スタート
 
