アニメーション後に針が隠れないよう修正
ルーレットの針にz-indexを指定していなかったため、z-indexを追加

--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -15,7 +15,7 @@ div.flex
           li.absolute.theme__label value="4" style="left: -1.0050506338833571px; top: -108.99494936611666px; transform: rotate(-45deg);"
             | トークテーマ4
       div.absolute.roulette__needle-speaker
-      div.absolute.roulette__speaker
+      div#roulette2.absolute.roulette__speaker
         ul.absolute.speaker__labelContainer
           li.absolute.speaker__label style="left: -7.573593128807147px; top: 32.426406871192846px; transform: rotate(45deg)"
             | ユーザー1
