--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -1,17 +1,17 @@
 h2.text-2xl.font-bold.mb-3
   | Roulette page
-div.flex
+div.flex data-controller="roulette"
   div class="flex-initial w-[500px]"
     div class="text-center relative w-[500px]"
       div#roulette.roulette__theme
         ul.absolute.theme__labelContainer
-          li.absolute.theme__label value="1" style="left: -1.005050633883343px; top: 88.99494936611664px; transform: rotate(45deg);"
+          li.absolute.theme__label style="left: -1.005050633883343px; top: 88.99494936611664px; transform: rotate(45deg);"
             | トークテーマ1
-          li.absolute.theme__label value="2" style="left: -198.99494936611666px; top: 88.99494936611664px; transform: rotate(135deg);"
+          li.absolute.theme__label style="left: -198.99494936611666px; top: 88.99494936611664px; transform: rotate(135deg);"
             | トークテーマ2
-          li.absolute.theme__label value="3" style="left: -198.99494936611666px; top: -108.99494936611664px; transform: rotate(-135deg);"
+          li.absolute.theme__label style="left: -198.99494936611666px; top: -108.99494936611664px; transform: rotate(-135deg);"
             | トークテーマ3
-          li.absolute.theme__label value="4" style="left: -1.0050506338833571px; top: -108.99494936611666px; transform: rotate(-45deg);"
+          li.absolute.theme__label style="left: -1.0050506338833571px; top: -108.99494936611666px; transform: rotate(-45deg);"
             | トークテーマ4
       div#roulette2.absolute.roulette__speaker
         ul.absolute.speaker__labelContainer
