--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -1,11 +1,11 @@
 h2.text-2xl.font-bold.mb-3
   | Roulette page
 div.flex
-  div data-controller="roulette"
+  div data-controller="roulette rotate"
     div.flex
       div class="flex-initial w-[500px]"
-        div#rou class="text-center relative w-[500px]"
-          div#roulette.roulette__theme
+        div class="text-center relative w-[500px]"
+          div.roulette__theme data-rotate-target="talk"
             ul.absolute.theme__labelContainer
               li.absolute.theme__label style="left: -1.005050633883343px; top: 88.99494936611664px; transform: rotate(45deg);"
                 | トークテーマ1
@@ -15,7 +15,7 @@ div.flex
                 | トークテーマ3
               li.absolute.theme__label style="left: -1.0050506338833571px; top: -108.99494936611666px; transform: rotate(-45deg);"
                 | トークテーマ4
-          div#roulette2.absolute.roulette__speaker
+          div.absolute.roulette__speaker data-rotate-target="speaker"
             ul.absolute.speaker__labelContainer
               li.absolute.speaker__label style="left: -7.573593128807147px; top: 32.426406871192846px; transform: rotate(45deg)"
                 | ユーザー1
@@ -28,10 +28,8 @@ div.flex
       div.flex-initial.w-8.relative
         div.absolute.roulette__needle
     div.flex
-      div data-controller="start"
-        button.btn.btn-primary.mr-2 data-action="click->start#execute"
-          | スタート
-      div data-controller="reset"
-        button.btn data-action="click->reset#execute"
-          | リセット
+      button.btn.btn-primary.mr-2 data-action="click->rotate#start"
+        | スタート
+      button.btn data-action="click->reset#execute"
+        | リセット
 
