ヘルパーメソッドのファイル名を変更

--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -30,6 +30,6 @@ div.flex
     div.flex
       button.btn.btn-primary.mr-2 data-action="click->rotate#start"
         | スタート
-      button.btn data-action="click->reset#execute"
+      button.btn data-action="click->roulette#reset"
         | リセット
 
