ルーレット終了までボタンを非活性にするよう変更
ボタンを2重に押されると想定通りの挙動にならないため、
ルーレットの開始から終了まではスタートとリセットボタンを非活性にするよう変更

--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -28,8 +28,8 @@ div.flex
       div.flex-initial.w-8.relative
         div.absolute.roulette__needle
     div.flex
-      button.btn.btn-primary.mr-2 data-action="click->rotate#start"
+      button.btn.btn-primary.mr-2 data-rotate-target="startButton" data-action="click->rotate#start"
         | スタート
-      button.btn data-action="click->roulette#reset"
+      button.btn data-rotate-target="resetButton" data-action="click->roulette#reset"
         | リセット
 
