--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -34,10 +34,14 @@ div.flex
         | リセット
   div
     - @talk_themes.each do |talk_theme|
-      div.flex
-        p.hidden
-          = talk_theme.id
-        p
-          = talk_theme.theme
-        div
-          = link_to "×", "#", class: "btn btn-sm btn-circle"
+      = turbo_frame_tag talk_theme do
+        div.flex
+          p.hidden
+            = talk_theme.id
+          div
+            = link_to talk_theme.theme, edit_roulette_talk_theme_path(@roulette, talk_theme)
+          div
+            = link_to "×", "#", class: "btn btn-sm btn-circle"
+    = turbo_frame_tag 'new_talk_theme' do
+      div
+        = link_to "＋ トークテーマを追加する", new_roulette_talk_theme_path(@roulette)
