トークテーマ追加時にルーレットに反映されるよう修正

--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -5,7 +5,7 @@ div.flex
     div.flex
       div class="flex-initial w-[500px]"
         div class="text-center relative w-[500px]"
-          div.roulette__theme data-rotate-target="talk"
+          div.roulette__theme data-rotate-target="talk" style="#{Roulette.conic_gradient_text(@talk_themes)}"
             ul.absolute.theme__labelContainer
               li.absolute.theme__label style="left: -1.005050633883343px; top: 88.99494936611664px; transform: rotate(45deg);"
                 | トークテーマ1
