--- a/app/views/talk_themes/new.html.slim
+++ b/app/views/talk_themes/new.html.slim
@@ -1,5 +1,5 @@
 = turbo_frame_tag 'new_talk_theme'
   div.flex
-    = form_with model: [@roulette, @talk_theme], html: { data: { turbo_frame: 'talk_themes_list' } } do |f|
+    = form_with model: [@roulette, @talk_theme], html: { data: { turbo_frame: '_top' } } do |f|
       = f.text_field :theme, class: 'input input-bordered'
       = f.submit '登録', class: 'btn btn-secondary'
