--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -1,28 +1,29 @@
-h2.text-2xl.font-bold.mb-3
-  | Roulette page
-div.flex
-  div data-controller="roulette rotate"
-    div.flex
-      div class="flex-initial w-[500px]"
-        div class="text-center relative w-[500px]"
-          div.roulette__theme data-rotate-target="talk" style="#{Roulette.conic_gradient_text(@talk_themes)}"
-            ul.absolute.theme__labelContainer
-              - @talk_themes.each_with_index do |talk_theme, idx|
-                li.absolute.theme__label data-roulette-target="talkTheme" data-rotate-target="talkTheme" style="#{Roulette.label_position_and_angle(140, @talk_themes.count, idx, 100, 10)}"
-                  = talk_theme.theme
-          div.absolute.roulette__speaker data-rotate-target="speaker"style="#{Roulette.conic_gradient_text(@speakers)}"
-            ul.absolute.speaker__labelContainer
-              - @speakers.each_with_index do |speaker, idx|
-                li.absolute.speaker__label data-roulette-target="speakerName" data-rotate-target="speakerName" style="#{Roulette.label_position_and_angle(70, @speakers.count, idx, 50, 10)}"
-                  = speaker.name
-      div.flex-initial.w-8.relative
-        div.absolute.roulette__needle
-    div.flex
-      button.btn.btn-primary.mr-2 data-rotate-target="startButton" data-action="click->rotate#start"
-        | スタート
-      button.btn data-rotate-target="resetButton" data-action="click->roulette#reset"
-        | リセット
-  div.ml-10
-    = render partial: 'talk_themes/index', locals: { talk_themes: @talk_themes }
-  div.ml-10
-    = render partial: 'speakers/index', locals: { speakers: @speakers }
+div data-controller="rotate"
+  div.h-6.mb-10
+    p.font-bold.text-2xl data-rotate-target="result"
+  div.flex
+    div
+      div.flex
+        div class="flex-initial w-[500px]"
+          div class="text-center relative w-[500px]"
+            div.roulette__theme data-rotate-target="talk" style="#{Roulette.conic_gradient_text(@talk_themes)}"
+              ul.absolute.theme__labelContainer
+                - @talk_themes.each_with_index do |talk_theme, idx|
+                  li.absolute.theme__label data-roulette-target="talkTheme" data-rotate-target="talkTheme" style="#{Roulette.label_position_and_angle(140, @talk_themes.count, idx, 100, 10)}"
+                    = talk_theme.theme
+            div.absolute.roulette__speaker data-rotate-target="speaker"style="#{Roulette.conic_gradient_text(@speakers)}"
+              ul.absolute.speaker__labelContainer
+                - @speakers.each_with_index do |speaker, idx|
+                  li.absolute.speaker__label data-roulette-target="speakerName" data-rotate-target="speakerName" style="#{Roulette.label_position_and_angle(70, @speakers.count, idx, 50, 10)}"
+                    = speaker.name
+        div.flex-initial.w-8.relative
+          div.absolute.roulette__needle
+      div.flex
+        button.btn.btn-primary.mr-2 data-rotate-target="startButton" data-action="click->rotate#start"
+          | スタート
+        button.btn data-rotate-target="resetButton" data-action="click->roulette#reset"
+          | リセット
+    div.ml-10
+      = render partial: 'talk_themes/index', locals: { talk_themes: @talk_themes }
+    div.ml-10
+      = render partial: 'speakers/index', locals: { speakers: @speakers }
