ヘッダー、フッターを追加
ヘッダーとフッターを追加。
トップページにはヘッダーを表示しないように実装。

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,4 +11,7 @@ html data-theme="winter"
     = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
 
   body
+    - unless current_page?(root_path)
+      = render partial: 'shared/header'
     = yield
+    = render partial: 'shared/footer'
