--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -2,7 +2,7 @@ div data-controller="rotate"
   div.h-6.mb-10
     p.font-bold.text-2xl data-rotate-target="result"
   div.flex
-    div
+    div data-controller="roulette"
       div.flex
         div class="flex-initial w-[500px]"
           div class="text-center relative w-[500px]"
