--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,2 +1,3 @@
-header.h-10
-  = link_to 'RouletteTalk', root_path
+header
+  div.flex.w-screen.items-center.py-2.pl-10.shadow
+    = link_to 'RouletteTalk', root_path, class: 'text-primary font-bold text-2xl'
