--- a/app/views/speakers/_index.html.slim
+++ b/app/views/speakers/_index.html.slim
@@ -1,9 +1,9 @@
 h2.font-bold.text-lg.mb-2
   | 話す人
 = turbo_frame_tag 'speakers_list'
-  ul.rounded.border.border-gray-400
+  ul.rounded.border.border-gray-400.max-h-60.overflow-y-auto.w-80
     - speakers.each do |speaker|
-      li.border-b.last:border-b-0.border-gray-400.h-10.w-80
+      li.border-b.last:border-b-0.border-gray-400.h-10.w-full
         = turbo_frame_tag speaker do
           div.flex.items-center.px-4.h-full
             p.hidden
