--- a/app/views/talk_themes/_index.html.slim
+++ b/app/views/talk_themes/_index.html.slim
@@ -1,9 +1,9 @@
 h2.font-bold.text-lg.mb-2
   | トークテーマ
 = turbo_frame_tag 'talk_themes_list'
-  ul.rounded.border.border-gray-400
+  ul.rounded.border.border-gray-400.max-h-60.overflow-y-auto.w-80
     - talk_themes.each do |talk_theme|
-      li.border-b.last:border-b-0.border-gray-400.h-10.w-80
+      li.border-b.last:border-b-0.border-gray-400.h-10.w-full
         = turbo_frame_tag talk_theme do
           div.flex.items-center.px-4.h-full
             p.hidden
