--- a/app/views/talk_themes/new.html.slim
+++ b/app/views/talk_themes/new.html.slim
@@ -1,5 +1,5 @@
 = turbo_frame_tag 'new_talk_theme'
-  div.flex
-    = form_with model: [@roulette, @talk_theme], html: { data: { turbo_frame: '_top' } } do |f|
-      = f.text_field :theme, class: 'input input-bordered'
-      = f.submit '登録', class: 'btn btn-secondary'
+  div.mt-3.px-1
+    = form_with model: [@roulette, @talk_theme], html: { data: { turbo_frame: '_top' } }, class: 'w-full flex' do |f|
+      = f.text_field :theme, class: 'input input-bordered input-sm w-4/5'
+      = f.submit '登録', class: 'btn btn-outline btn-sm btn-primary ml-auto'
