--- a/app/views/speakers/_index.html.slim
+++ b/app/views/speakers/_index.html.slim
@@ -1,20 +1,21 @@
 h2.font-bold.text-lg.mb-2
   | 話す人
 = turbo_frame_tag 'speakers_list'
-  ul.rounded.border.border-gray-400.max-h-60.overflow-y-auto.w-80
-    - speakers.each do |speaker|
-      li.border-b.last:border-b-0.border-gray-400.h-10.w-full.group
-        = turbo_frame_tag speaker do
-          div.flex.items-center.px-4.h-full
-            p.hidden
-              = speaker.id
-            div.flex-1
-              = link_to speaker.name, edit_roulette_speaker_path(@roulette, speaker), class: 'w-full block'
-            div.ml-auto.opacity-0.group-hover:opacity-80
-              = link_to image_tag('delete-icon.png', size: '10x10'),
-                roulette_speaker_path(@roulette, speaker),
-                data: { turbo_method: :delete, turbo_frame: '_top' },
-                class: "btn btn-sm btn-circle btn-ghost"
+  div.rounded.border.border-gray-400.w-80.overflow-hidden.pr-1
+    ul.w-full.max-h-60.overflow-y-auto
+      - speakers.each do |speaker|
+        li.border-b.last:border-b-0.border-gray-400.h-10.w-full.group
+          = turbo_frame_tag speaker do
+            div.flex.items-center.px-4.h-full
+              p.hidden
+                = speaker.id
+              div.flex-1
+                = link_to speaker.name, edit_roulette_speaker_path(@roulette, speaker), class: 'w-full block'
+              div.ml-auto.opacity-0.group-hover:opacity-80
+                = link_to image_tag('delete-icon.png', size: '10x10'),
+                  roulette_speaker_path(@roulette, speaker),
+                  data: { turbo_method: :delete, turbo_frame: '_top' },
+                  class: "btn btn-sm btn-circle btn-ghost"
   = turbo_frame_tag 'new_speaker' do
     div.mt-3.px-1
       = link_to "＋ トークテーマを追加する", new_roulette_speaker_path(@roulette), class: 'text-neutral'
