--- a/app/views/talk_themes/_index.html.slim
+++ b/app/views/talk_themes/_index.html.slim
@@ -1,20 +1,21 @@
 h2.font-bold.text-lg.mb-2
   | トークテーマ
 = turbo_frame_tag 'talk_themes_list'
-  ul.rounded.border.border-gray-400.max-h-60.overflow-y-auto.w-80
-    - talk_themes.each do |talk_theme|
-      li.border-b.last:border-b-0.border-gray-400.h-10.w-full.group
-        = turbo_frame_tag talk_theme do
-          div.flex.items-center.px-4.h-full
-            p.hidden
-              = talk_theme.id
-            div.flex-1
-              = link_to talk_theme.theme, edit_roulette_talk_theme_path(@roulette, talk_theme), class:'w-full block'
-            div.ml-auto.opacity-0.group-hover:opacity-80
-              = link_to image_tag('delete-icon.png', size: '10x10'),
-                roulette_talk_theme_path(@roulette, talk_theme),
-                data: { turbo_method: :delete, turbo_frame: '_top' },
-                class: "btn btn-xs btn-circle btn-ghost"
+  div.rounded.border.border-gray-400.w-80.overflow-hidden.pr-1
+    ul.w-full.max-h-60.overflow-y-auto
+      - talk_themes.each do |talk_theme|
+        li.border-b.last:border-b-0.border-gray-400.h-10.w-full.group
+          = turbo_frame_tag talk_theme do
+            div.flex.items-center.px-4.h-full
+              p.hidden
+                = talk_theme.id
+              div.flex-1
+                = link_to talk_theme.theme, edit_roulette_talk_theme_path(@roulette, talk_theme), class:'w-full block'
+              div.ml-auto.opacity-0.group-hover:opacity-80
+                = link_to image_tag('delete-icon.png', size: '10x10'),
+                  roulette_talk_theme_path(@roulette, talk_theme),
+                  data: { turbo_method: :delete, turbo_frame: '_top' },
+                  class: "btn btn-xs btn-circle btn-ghost"
   = turbo_frame_tag 'new_talk_theme' do
     div.mt-3.px-1
       = link_to "＋ トークテーマを追加する", new_roulette_talk_theme_path(@roulette), class: 'text-neutral'
