--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -32,10 +32,16 @@ div.mt-6 data-controller="rotate"
               | リセット
     div.ml-44
       div.flex.justify-end
-        = button_tag  onclick: 'help_modal.showModal()', class: 'btn bg-neutral-content flex items-center'
-          = image_tag 'help-icon.png', size: '16x16'
-          p.leading-4
-            | 使い方
+        div data-controller="clipboard"
+          = button_tag 'data-action'=>'clipboard#copy', class: 'btn bg-neutral-content flex items-center'
+            = image_tag 'copy-link-icon.png', size: '17x16'
+            p.leading-4.tracking-wider.ml-1
+              | リンクのコピー
+        div.ml-2
+          = button_tag onclick: 'help_modal.showModal()', class: 'btn bg-neutral-content flex items-center'
+            = image_tag 'help-icon.png', size: '16x16'
+            p.leading-4.tracking-wider
+              | 使い方
       = render partial: 'roulettes/modal'
       div.mt-12.h-80
         = render partial: 'talk_themes/index', locals: { talk_themes: @talk_themes }
