ヘッダーとファビコンを設定

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,10 +7,11 @@ html
     = csrf_meta_tags
     = csp_meta_tag
 
+    = favicon_link_tag('favicon.ico')
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
 
-  body.relative.min-h-screen.bg-base-200.w-screen
+  body.relative.min-h-screen.w-screen
     - unless current_page?(root_path)
       = render partial: 'shared/header'
     main.w-fit.mx-auto
