--- a/app/views/roulettes/_modal.html.slim
+++ b/app/views/roulettes/_modal.html.slim
@@ -1,7 +1,7 @@
 dialog#help_modal.modal
   form.modal-backdrop method="dialog"
     button
-  div.modal-box.w-2/3.max-w-3xl.h-4/5.bg-base-200.overflow-hidden.pr-3.pl-10.pt-10.pb-10
+  div.modal-box.w-2/3.max-w-3xl.h-4/5.overflow-hidden.pr-3.pl-10.pt-10.pb-10
     div.w-full.h-full.overflow-y-auto
       form method="dialog"
         = button_tag class: 'btn btn-sm btn-circle btn-ghost absolute right-8 top-4'
