--- a/app/views/speakers/_index.html.slim
+++ b/app/views/speakers/_index.html.slim
@@ -1,7 +1,7 @@
 h2.font-bold.text-lg.mb-2
   | 話す人
 = turbo_frame_tag 'speakers_list'
-  div.rounded.border.border-gray-400.w-80.overflow-hidden.pr-1
+  div.rounded.border.border-gray-400.w-80.overflow-hidden
     ul.w-full.max-h-60.overflow-y-auto
       - speakers.each do |speaker|
         li.border-b.last:border-b-0.border-gray-400.h-10.w-full.group
