--- a/app/views/talk_themes/_index.html.slim
+++ b/app/views/talk_themes/_index.html.slim
@@ -1,7 +1,7 @@
 h2.font-bold.text-lg.mb-2
   | トークテーマ
 = turbo_frame_tag 'talk_themes_list'
-  div.rounded.border.border-gray-400.w-80.overflow-hidden.pr-1
+  div.rounded.border.border-gray-400.w-80.overflow-hidden
     ul.w-full.max-h-60.overflow-y-auto
       - talk_themes.each do |talk_theme|
         li.border-b.last:border-b-0.border-gray-400.h-10.w-full.group
